# tinyAgent

./: .coderabbit.yaml  .envexample  .gitignore  .pre-commit-config.yaml  .vulture-whitelist.py  AGENTS.md  AUDIT_SMALL_WINS_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HARNESS.md  INSTALL.md  Makefile  OSS.PY  PLAN.md  README.md  RESEARCH.md  __init__.py  alchemy-minimax-bug-report.md  code_review_analysis.md  config.yml  contributing.md  duck.py  example.py  exampleconfig.yml  index.html  main.py  organization_plan.md  plan.md  prompt_variations.py  publish_to_pip.sh  pyproject.toml  requirements.txt  setup.py  tariffReportAgent.py  tariffs_summary.md  test_all_variants.py  test_business_search.py  test_cache_live.py  test_complex.py  (+10 more)
.artifact/: pypi-release-postmortem-2026-03-24.md  rust-binding-restoration.md
.beads/: interactions.jsonl
.changelog/: CHANGELOG.md
.claude/: JOURNAL.md  manifest.json  manifest.md  scratchpad_log.txt  settings.local.json
.githooks/: pre-push
.tickets/: kap-04cd.md  kap-1103.md  kap-1279.md  kap-4b49.md  kap-4f83.md  kap-5cb0.md  kap-7bd7.md  kap-9e9b.md  kap-a2e3.md  kap-ac21.md  kap-b879.md  kap-e565.md  kap-kd8f.md  kap-ldov.md  kap-migc.md  kap-rgu2.md  kap-zer6.md
api/: config.py  dependencies.py  main.py
cookbook/: 00_function_agent.py  01_basic_agent.py  02_factory_agent.py  03_decorator_agent.py  04_dynamic_agent.py  05_elder_brain_demo.py  05_elder_brain_report_generation.py  05_file_manipulator.py  06_text_browser.py  07_os_deepresearch.py  08_retry_warmup_escalation.py  09_business_research.py  09_research.py  10_boilerplate_test.py  10_elder_brain.py  10_orchestrator_example.py  HowToCook.md  cookbook.md  elderbrain_full_result.json  elderbrain_report.json  tiny_agent_chain.py  trade_tariff_analyzer.py
core/: __init__.py  agent.py  decorators.py  tool.py
data/: python_provider_full_run.json  python_provider_full_run_v0_1_2.json  rust_binding_full_run.json  rust_binding_full_run_v0_1_2.json  traces.db  usage_parity_diff_v0_1_2.json  usage_parity_summary_v0_1_2.json
docs/: ARCHITECTURE.md  README.md  alchemy-binding.md  architecture.md  ast-grep-no-typealias.md  contract-analysis.md  merge3.md  plan_limits_refactor.md  product_requirement_docs.md  releasing-alchemy-binding.md  rust-agent-alchemy-backend.md  rust-data-ingress-contracts.md  rust-real-agent.md  rust-runtime-types.md  rust-tool-call-boundary.md  technical.md
documentation/: agent_comparison.md  agents.md  elder_brain_fix.md  observability.md  python_execution_comparison.md  rag.md  tiny_chain_implementaion.md  tinyagent_flow.md
examples/: __init__.py  calc_demo.py  code_agent_demo.py  code_demo.py  ddgs_search_demo.py  doc_agent.py  example_caching.py  example_chat.py  example_chat_alchemy.py  example_chat_stream_text.py  example_minimax_alchemy.py  example_minimax_alchemy_tools.py  example_parallel_tools.py  example_react_tools.py  example_reasoning.py  example_tool_calls_three_providers.py  file_prompt_demo.py  hybrid_agent_demo.py  jina_reader_demo.py  memory_demo.py  minimax_tool_contract_examples.py  model_comparison.py  qwen3_local_demo.py  react_ai_agent.py  react_demo.py  react_phase2.py  report.md  rpg_demo.py  simple_demo.py  smolagents_memory_research.md  stock_analysis_demo.py  v2_demo.py  web_search_tool.py
harness/: tool_call_types_harness.py
install/: linuxInstall.sh
memory-bank/: activeContext.md  ai_instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notes/: react_implementation_2025-05-26.md  react_scratchpad_review_2025-01-26.md  reasoning_agent_rename_2025-01-26.md
plans/: qwen3_local_example_plan.md
reports/: CODE_HEALTH_AUDIT.md  SMALL_WINS_AUDIT.md
rules/: README.md  harness_no_duck_typing.yml  harness_no_thin_protocols.yml
rust/: Cargo.toml
rust/examples/: minimax_agent_multiturn.rs
rust/src/: agent.rs  agent_loop.rs  agent_tool_execution.rs  alchemy_backend.rs  alchemy_contract.rs  lib.rs  types.rs
scripts/: build_release_debug_artifact.py  check_markdown_frontmatter.sh  check_naming_conventions.py  check_python_line_count.py  check_release_binding.py  check_release_wheels.py  deploy.sh  lint_architecture.py  lint_binding_drift.py  lint_debt.py  lint_file_length.py  lint_tinyagent_tree.py  smoke_rust_tool_calls_three_providers.py  smoke_test_built_wheel.py  smoke_usage_alchemy.py  stage_release_binding.py  timing_alchemy_stream.py  verify_agent_contract.py  verify_alchemy_contract.py
src/: lib.rs
tasks/: active_context.md  task_012.txt  tasks.json  tasks_plan.md
test/: __init__.py  conftest.py
tests/: 00_test_single_tool_sanity_test.py  02_test_tiny_chain_tooling.py  05_vector_memory_provider_smoke_test.py  08_react_agent_test.py  09_react_scratchpad_test.py  __init__.py  show_error.py  test_00_single_tool_sanity_test.py  test_agent.py  test_agent_integration.py  test_agent_sum_live.py  test_agent_types.py  test_agent_util_responses.py  test_alchemy_provider.py  test_base_agent.py  test_caching.py  test_console_tracing.py  test_contracts.py  test_docs_links.py  test_exceptions.py  test_finalizer.py  test_intake.py  test_logger.py  test_memory_manager.py  (+28 more)
tinyagent-rs/: .env.example  Cargo.toml  README.md
tinyagent-rs/examples/: minimax_smoke.rs  minimax_tool_multiturn_smoke.rs  minimax_tool_smoke.rs  minimax_two_sessions_five_turns.rs  prompt.rs  steer.rs  stream.rs  tools.rs
tinyagent-rs/src/: agent.rs  agent_loop.rs  agent_options.rs  agent_streaming.rs  agent_tool_execution.rs  agent_types.rs  alchemy_stream.rs  error.rs  lib.rs  looper_support.rs
tinyagent-rs/src/agent/: builder.rs  facade.rs  mod.rs
tinyagent-rs/src/engine/: loop_impl.rs  mod.rs  stream_assistant.rs
tinyagent-rs/src/providers/: adapter.rs  alchemy.rs  mod.rs
tinyagent-rs/src/tools/: executor.rs  mod.rs  registry.rs
tinyagent-rs/src/types/: content.rs  context.rs  event.rs  message.rs  mod.rs  model.rs  state.rs  stream.rs  tool.rs
tinyagent-rs/tests/: agent_lifecycle.rs  continue_and_limits.rs  live_minimax_smoke.rs  queues.rs  streaming.rs  tool_parallelism.rs
(+314 files in other folders)
