[package]
name = "tinyagent-alchemy"
version = "1.2.3"
edition = "2021"

[lib]
name = "_alchemy"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pythonize = "0.27"

# Runtime
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The Rust LLM abstraction
alchemy-llm = "0.1.6"

# Vendor OpenSSL for cross-compilation (compiles from source)
openssl = { version = "0.10", features = ["vendored"] }
