[project]
name = "tiny_agent_os"
version = "0.1.0"
dependencies = [
    "openai>=1.0",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100

# Assume Python 3.10
target-version = "py310"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and isort (I) rules
select = ["E", "F", "I"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# Use a single line for imports
force-single-line = false
# Combine imports from the same module
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
