[package]
name = "tinyagent-alchemy"
version = "0.1.0"
edition = "2024"

[lib]
name = "_alchemy"
crate-type = ["cdylib", "rlib"]

[dependencies]
alchemy-llm = "0.2.0"
futures = "0.3.32"
pyo3 = { version = "0.28.2", features = ["abi3-py310", "extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
