[package]
name = "tinyagent-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "tinyagent_core"
path = "src/lib.rs"

[dependencies]
alchemy-llm = { path = "../vendor/alchemy-llm" }
base64 = "0.22.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
