[package]
name = "tinyagent-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust rewrite of tinyAgent built on alchemy-rs and looper-rs"

[dependencies]
alchemy-llm = { path = "../alchemy-rs" }
looper = { path = "../looper-rs" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

[dev-dependencies]
serial_test = "3.2"
